# opencl_demo

./: CMakeLists.txt  README.md  capsbasic.cpp  opencl_test.h
